--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -79,7 +79,7 @@ disable_top_img: false
 default_top_img:
 
 # The banner image of index page
-index_img:
+index_img: "background: url(https://www.dmoe.cc/random.php)"
 
 # The banner image of archive page
 archive_img:
