更新 _config.butterfly.yml

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -210,7 +210,7 @@ reward:
   enable: true
   text: 
   QR_code:
-     - img: /img/wechat.jpg
+     - img: /source/img/weixin.jpg
        link:
        text: wechat
     #  - img: /img/alipay.jpg
