--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -96,7 +96,7 @@ background:
 
 cover:
   # Disable the cover or not
-  index_enable: true
+  index_enable: false
   aside_enable: true
   archives_enable: true
   # When cover is not set, the default cover is displayed
