更新 _config.butterfly.yml

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -91,7 +91,7 @@ footer_img: false
 
 # Website Background
 # Can set it to color or image url
-background:
+background: https://api.paugram.com/bing
 
 cover:
   # Disable the cover or not
